<resources>
    <string name="app_name">WhoWantsToBeMillonaire</string>
    <string name="title_activity_favourites">Favourites</string>
    <string name="title_activity_credits">Credits</string>
    <string name="play">Play</string>
    <string name="scores">Scores</string>
    <string name="settings">Settings</string>
    <string name="credits">Credits</string>
    <string name="creditsName">Javier García Valencia</string>
    <string name="descriptionPhotoCredits">Author photo</string>
    <string name="add_friends">Add friend</string>
    <string name="add_your_friends">Add your friends:</string>
    <string name="user_name">User name</string>
    <string name="text_help">How many times can you ask for help?</string>
    <string name="friends_name">Your friend\'s user name here</string>
    <string name="hint_user_name">Your user name here</string>
    <string name="title_app">Who wants to be a millonaire?</string>
    <string name="settings_title">Settings</string>
    <string name="credits_title">Credits</string>
    <string name="play_title">Questions</string>
    <string name="scores_title">Scores</string>
    <string name="delete_all">Delete all</string>
    <string name="alert_delete_scores">Are you sure you want to delete all scores?</string>
    <string name="tab_local">Local</string>
    <string name="tab_friends">Friends</string>
    <string name="tabFriends">tabFriends</string>
    <string name="tabLocal">tabLocal</string>
    <string name="title_activity_app_compat_preference">Settings</string>
    <string name="noInternet">No Internet Connection</string>
    <string name="text_friends">Add friends</string>
    <string name="exit_message">Are you sure you want to exit? Your score will be saved.</string>
    <string name="exit">Exit</string>
    <string name="lose_message">I\'m sorry… Good luck next time!</string>
    <string name="gameover">Game Over</string>
    <string name="win_min_message">Great, you don\'t be a millonaire, but you have win</string>
    <string name="win">You win!</string>
    <string name="win_message">CONGRATULATION! You\'re a millonaire!</string>
    <string name="hints_changed">Now, you can ask for help</string>
    <string name="times">times</string>
    <string name="friend_added">Friend added correctly!</string>
    <string name="cant_use_more_hint">You can\'t use more hints!</string>
    <string name="playing_for">Playing for</string>
    <string name="game_reset_text">The game has been reset</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
