<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activityMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbackground"
    tools:context="com.example.javitan.practica3.activities.MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/mainbackground" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/bPlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="60dp"
            android:onClick="dashboardButtonClicked"
            android:text="@string/play" />

        <Button
            android:id="@+id/bScores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="60dp"
            android:onClick="dashboardButtonClicked"
            android:text="@string/scores" />

        <Button
            android:id="@+id/bSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="60dp"
            android:onClick="dashboardButtonClicked"
            android:text="@string/settings" />
    </LinearLayout>

</FrameLayout>
